fix(lots): paddings/gaps, removed card border

--- a/styles/content/lots.css
+++ b/styles/content/lots.css
@@ -2,7 +2,7 @@
   padding: 180px 50px 0;
   display: flex;
   flex-direction: column;
-  gap: 25px
+  gap: 30px
   /* letter-spacing: 0; */
 }
 
@@ -46,8 +46,6 @@
   flex-grow: 1;
   min-height: 450px;
   width: 430px;
-  /* fixme: remove border after put background img */
-  border: 1px solid #000;
 }
 
 .card::before {
